--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.25rem;
     margin-bottom: 15px;
-    color: white;
+    color: black;
 
 }
 .homecoderimage img{
